[package]
name = "rsd-api"
version = "0.1.0"
authors = ["Scott Mattan <scott.mattan@rustysys.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
bytes = "0.5"
env_logger = "0.8"
futures = "0.3.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"